# imgs2xl

./: .gitignore  LICENSE  Pipfile  README.md  requirements.txt  setup.cfg  setup.py  skeleton.json
.github/workflows/: build.yaml
imgs2xl/: __init__.py  cli.py  gui.py  imgs2xl.py  input_json.py  metadata.py
