[metadata]
name = imgs2xl
version = attr: imgs2xl.__version__
url = https://github.com/fujiba/imgs2xl
author = T.Fujiba
license_files = LICENSE
license = MIT
description = Output an Excel sheet with thumbnails from an image files.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
install_requires =
    openpyxl
    Pillow
python_requires = >=3.7
packages = find:

[options.entry_points]
console_scripts =
    imgs2xl = imgs2xl.cli:main
gui_scripts =
    gimgs2xl = imgs2xl.gui:main
